--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
-@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700");
 
 
 	html, body, div, span, iframe, h1, h2, h3, h4, h5, h6, p, a, em, img, q, s, small, strike, sup, tt, var, u, i, center, dl, dt, dd, ol, ul, li, form, label, legend, table,tbody, tfoot, thead, tr, th, td, article, aside, canvas, embed, figure,  footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
